[package]
name = "esp32c3_mqtt_TH"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "esp32c3_mqtt_TH"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
anyhow = "=1.0.86"
embedded-hal = "=0.2.7"
esp-idf-hal = "=0.44.1"
esp-idf-svc = "=0.49.0"
esp-idf-sys = "=0.35.0"
embedded-svc = "=0.28.0"
icm42670 = "=0.1.1"
lis3dh = "=0.4.2"
shared-bus = "=0.3.1"
shtcx = "=0.11.0"
esp32c3_wifi = "0.1.3"
log = "=0.4.22"
toml-cfg = "=0.1.3"
chrono = "0.4"
hmac = "0.12.1"
md-5 = "0.10.6"
hex = "0.4.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
embuild = "0.32.0"
toml-cfg = "=0.1.3"
